--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_USERNAME = ravi
-DB_PASSWORD = ravi123
+# DB_USERNAME = ravi
+# DB_PASSWORD = ravi123
+DB_URI = mongodb+srv://ravi:ravi123@nodetuts.syfifvs.mongodb.net/chat?retryWrites=true&w=majority&appName=nodetuts
