--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "gridfs-stream": "^1.1.1",
+    "mongodb": "^5.9.1",
     "mongoose": "^8.15.1",
-    "multer": "^2.0.1",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.10"
   },
   "type": "module",
